--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -41,14 +41,14 @@
             <button type="button" class="btn btn-primary"
             (click)="registerUser()">Register</button>
           </ng-template>
-
-
-
+          &nbsp;
+          &nbsp;
+          &nbsp;
           <a href="javascript:void(0)"
             (click)="this.isForgotPassword=true;">Forgot Password?</a>
 
         </div>
-        <div class="form-group" *ngIf="isForgotPassowrd">
+        <div class="form-group" *ngIf="isForgotPassword">
 
           <button type="button" class="btn"
             (click)="this.isForgotPassword=false;">Cancel</button>
@@ -57,7 +57,7 @@
         </div>
         <div class="form-group text-center">
           <img src="../assets/images/googlebtn.png" alt="" srcset=""
-            (click)="googleLogin()" style="cursor: pointerl;">
+            (click)="googleLogin()" style="cursor: pointer; width: 300px;">
         </div>
 
       </div>
